[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecraft-separation-simulator"
version = "0.1.0"
description = "A simulation of spacecraft separation from a launch vehicle."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
